Remove border and padding from the box background of the cards list, make app a ts component, fix the alignment of the cards

--- a/src/cards_list/cardsList.module.css
+++ b/src/cards_list/cardsList.module.css
@@ -16,10 +16,7 @@
   display: flex;
   width: 50%;
   margin: 0 auto;
-  margin-top: 100px;
   justify-content: center;
   align-items: center;
   font-weight: 400;
-  box-shadow: 1px 1px 15px darkgray;
-  padding: 150px 200px;
 }
